# fchess

./: .fchess_history  .gitattributes  .gitignore  Cargo.toml  README.md  all.html  build.rs  crates.js  enum.Side.html  help.html  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js  src-files.js
.github/workflows/: docs.yaml  main.yaml
book/: all.html  fn.main.html  index.html  struct.Book.html
books/: human.sh
cli/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
epds/: benchmark-2.epd  debug.epd  ferdy_perft_single_check_9.epd  short.epd
fchess/: all.html  enum.Side.html  index.html  sidebar-items.js  struct.Board.html  struct.Book.html  struct.Move.html  struct.MoveGenerator.html  struct.MoveSet.html  struct.Solver.html  struct.Square.html
fchess/bitboard/: index.html  sidebar-items.js  trait.BitboardExt.html  type.Bitboard.html
fchess/bitwise/: fn.enable_bit.html  fn.set_bit.html  index.html  sidebar-items.js
fchess/board/: fn.print_board.html  index.html  sidebar-items.js  struct.Board.html  struct.BoardIterator.html
fchess/book/: index.html  sidebar-items.js  struct.Book.html  struct.Entry.html
fchess/common/: constant.E.html  constant.N.html  constant.NE.html  constant.NW.html  constant.S.html  constant.SE.html  constant.SW.html  constant.W.html  index.html  sidebar-items.js  type.Shift.html
fchess/dumb7fill/: fn.dumb7fill.html  index.html  sidebar-items.js
fchess/move_generator/: fn.generate_black_pawn_attacks.html  fn.generate_black_pawn_moves.html  fn.generate_knight_moves.html  fn.generate_white_pawn_attacks.html  fn.generate_white_pawn_moves.html  index.html  sidebar-items.js  struct.MoveGenerator.html
fchess/moves/: enum.Scope.html  index.html  (+2 more)
fen_diagram/: all.html  fn.main.html  index.html
scripts/: apply_move_tests.sh  movegen_tests.sh  run_move_generation_tests.sh
src/: bitboard.rs  bitwise.rs  board.rs  board_builder.rs  book.rs  common.rs  dumb7fill.rs  epd.rs  fen.rs  lib.rs  main.rs  move_generator.rs  moves.rs  moveset.rs  piece.rs  san.rs  side.rs  solver.rs  square.rs  utils.rs  zobrist_hash.rs
test_apply_move/: all.html  fn.main.html  index.html  sidebar-items.js  struct.SuitResult.html  struct.TestCase.html  struct.TestResult.html
test_move_generation/: all.html  fn.main.html  index.html  struct.SuitResult.html  struct.TestCase.html  struct.TestResult.html
test_movegen/: all.html  fn.main.html  index.html  sidebar-items.js  struct.MovegenTestResult.html  struct.SuitResult.html  struct.TestCase.html  struct.TestResult.html
testcases/: castling.json  famous.json  pawns.json  promotions.yaml  promotions_converted.yaml  promotions_converted_pretty.json  standard.json  taxing.json  taxing.yaml
uci/: all.html  fn.main.html  index.html
(+116 files in other folders)
