[package]
name = "fchess"
version = "0.1.0"
authors = ["joajfreitas <joaj.freitas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"


[[bin]]
name = "uci"
path = "bin/uci.rs"


[[bin]]
name = "test"
path = "bin/test.rs"
