[package]
name = "fchess"
version = "0.1.0"
authors = ["joajfreitas <joaj.freitas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rustyline = "10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.2.1", features = ["derive"] }
priority-queue = "1.3.0"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rstest = "0.17.0"

[lib]
name = "fchess"
path = "src/lib.rs"

[[bin]]
name = "uci"
path = "bin/uci.rs"


[[bin]]
name = "test_apply_move"
path = "bin/test_apply_move.rs"

[[bin]]
name = "test_movegen"
path = "bin/test_movegen.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "book"
path = "bin/book.rs"

[[bin]]
name = "fen_diagram"
path = "bin/fen_diagram.rs"


[[bin]]
name = "test_epd"
path = "bin/test_epd.rs"
