[package]
name = "fchess"
version = "0.1.0"
authors = ["joajfreitas <joaj.freitas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rustyline = "16"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4.5.0", features = ["derive"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rstest = "0.25.0"

[lib]
name = "fchess"
path = "src/lib.rs"

[[bin]]
name = "uci"
path = "bin/uci.rs"


[[bin]]
name = "test_apply_move"
path = "bin/test_apply_move.rs"

[[bin]]
name = "test_movegen"
path = "bin/test_movegen.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "book"
path = "bin/book.rs"

[[bin]]
name = "fen_diagram"
path = "bin/fen_diagram.rs"
